--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,20 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+/*Animations*/
+
+@keyframes panBackground {
+  0% {
+    transform: scale(1.1) translateX(0%);
+  }
+  100% {
+    transform: scale(1.1) translateX(-5%);
+  }
+}
+
+.animate-pan {
+  animation: panBackground 18s ease-in-out infinite alternate;
+}
